<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_clothes_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.huaxie.kladervader.ClothesListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/change_picture_for_weather"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/finish"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/add_picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/add_picture"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimaryDark"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/picture_list_view"
        android:layout_below="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="no picture choosed"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageViewLoad"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>



</RelativeLayout>
